--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
   "license": "UNLICENSED",
   "scripts": {
     "build:all": "npm install && nest build && cd points && npm install && npm run build",
+    "build:deploy": "npm run build:back && npm run build:front",
+    "build:front": "cd points && npm install && npm run build",
+    "build:back": "npm install && nest build",
+    "build:git" : "git add . && git commit -m 'update' && git push",
     "prebuild": "rimraf backend_dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
