--- a/package.json
+++ b/package.json
@@ -6,11 +6,12 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "x": "npm run build:deploy -- --m 'test message'",
     "build:all": "npm install && nest build && cd points && npm install && npm run build",
-    "build:deploy": "npm run build:back && npm run build:front",
+    "build:deploy": "npm run build:back && npm run build:front && npm run build:git",
     "build:front": "cd points && npm install && npm run build",
     "build:back": "npm install && nest build",
-    "build:git" : "git add . && git commit -m 'update' && git push",
+    "build:git": "git add . && git commit -m 'update' && git push",
     "prebuild": "rimraf backend_dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
