--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
-    "x": "npm run build:deploy -- --m 'test_message'",
-    "build:all": "npm install && nest build && cd points && npm install && npm run build",
-    "build:deploy": "npm run build:back && npm run build:front && npm run build:git",
+    "x": "npm run build:deploy -- test_message",
+    "build:deploy": "npm run build:back && npm run build:front && npm run git",
     "build:front": "cd points && npm install && npm run build",
     "build:back": "npm install && nest build",
-    "build:git": "git add . && git commit -m 'update' && git push",
+    "git": "git add . && git commit -m",
+    "postgit": "git push",
+
     "prebuild": "rimraf backend_dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
