--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "build:back": "nest build",
     "git": "git add . && git commit -m",
     "postgit": "git push",
-    
     "prebuild": "rimraf backend_dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
@@ -38,12 +37,14 @@
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/serve-static": "^3.0.0",
     "bcryptjs": "^2.4.3",
+    "nestjs-telegraf": "^2.6.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "telegraf": "^4.11.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
