--- a/vercel.json
+++ b/vercel.json
@@ -1,17 +1,15 @@
 {
   "version": 2,
-  "builds": [{
-    "src": "src/main.ts",
-    "use": "@vercel/node"
-  }],
-  "routes": [{
-    "src": "/(.*)",
-    "dest": "src/main.ts",
-    "methods": [
-      "GET",
-      "POST",
-      "PUT",
-      "DELETE"
-    ]
-  }]
+  "builds": [
+    {
+      "src": "public/main.js",
+      "use": "@now/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "public/main.js"
+    }
+  ]
 }
